Made more responsive

--- a/index2.html
+++ b/index2.html
@@ -45,7 +45,7 @@
       </h1>
 
 
-<div style = "display: none" id="snowflakes-photo">
+<div id = "snowflakes-photo">
   <a id="snowflake" href="https://unsplash.com/@kalleandco?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Kalle Kortelainen">
         <span>
             <svg xmlns = "http://www.w3.org/2000/svg" viewBox="0 0 32 32">
