Modernized index.md for localhost

--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
-<script src = "../script.js"></script>
-<script>
-    let secondStylesheet = document.createElement('link');
-    secondStylesheet.href = 'css/additions.css';
-    secondStylesheet.type = 'text/css';
-    secondStylesheet.rel = 'stylesheet';
-    document.head.appendChild(secondStylesheet);
+<!DOCTYPE html>
+<html>
+<link href = "css/additions.css" type = "text/css" rel = "stylesheet">
+<title>Borum Feasts</title>
+<link href = "images/icon.ico" rel = "shortcut icon" type = "image/x-icon">
+<xmp theme="united" style="display:none;">
 
-    createLinkElement('image/x-icon', 'shortcut icon', 'images/icon.ico');
-</script>
-# Singh Catering Services
+# Singh Catering Services 
 
 <div style = "display: none" id="snowflakes-photo">
   <a id="snowflake" href="https://unsplash.com/@kalleandco?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Kalle Kortelainen">
@@ -30,8 +27,6 @@
 
 
 ## About ##
-
-Order.js is the first ES6 program (through the console) I have made that is hosted on GitHub through Git workflow. The person takes an order through a function call and the price is calculated based on what they ordered and how many items. 
 
 <object width = "900" height = "270" data = "README.html" type = "text/html"></object>
 <div id = "forms">
@@ -112,9 +107,6 @@ Order.js is the first ES6 program (through the console) I have made that is host
 <script src = "scripts/order.js"></script>
 <script src = "scripts/unaccessibleContent.js"></script>
 
-
-[Home](https://knowledgeablekangaroo.github.io)
-
 ## Attributions ##
 
 ### Favicon ###
@@ -129,4 +121,11 @@ Order.js is the first ES6 program (through the console) I have made that is host
 
 <a href = "#snowflake">Snowflake Photo</a>
 Photo by Kalle Kortelainen on Unsplash
+
+</xmp>
+
+
+
+<script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
+</html>
 
