--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
     <div class = "gt" id = "program"> </div>
 </div>
 
-<script src = "scripts/helperFunctions.js"></script>
-<script src = "scripts/orderIn.js"></script>
-<script src = "scripts/order.js"></script>
-<script src = "scripts/unaccessibleContent.js"></script>
+<script src = "./scripts/helperFunctions.js"></script>
+<script src = "./scripts/orderIn.js"></script>
+<script src = "./scripts/order.js"></script>
+<script src = "./scripts/unaccessibleContent.js"></script>
 
 ## Attributions ##
 
