--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <link href = "css/additions.css" type = "text/css" rel = "stylesheet">
 <title>Borum Feasts</title>
 <link href = "images/icon.ico" rel = "shortcut icon" type = "image/x-icon">
+<script src = "./scripts/helperFunctions.js"></script>
+<script src = "./scripts/orderIn.js"></script>
+<script src = "./scripts/order.js"></script>
+<script src = "./scripts/unaccessibleContent.js"></script>
 <xmp theme="united" style="display:none;">
 
 # Singh Catering Services 
