Revert "Moved inline styles to additions.css"
This reverts commit e3a43fd6adb4da006f3d23ce40edeae375ce6ed1.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 ## About ##
 
 <object width = "900" height = "270" data = "README.html" type = "text/html"></object>
-<div id = "forms">
+<div id = "forms" style = "border-color: rgba(27, 63, 68, 0.2); border-width: 1px; border-style: inset; padding: 2%; margin: 2%">
     <form>
         <p id = "orderType">
             <label for = "orderType">Enter the type of food order: </label>
@@ -102,7 +102,7 @@
     <input id = "writeroot" type = "button" value = "+ Add Order" onclick = "duplicateForm()" />
     <input id = "finish-order" disabled type = "button" value = "Finish Order" onclick = "orderAll()">
 </div>
-<div class = "highlight"> 
+<div style = "height: 50vh; overflow: auto;" class = "highlight"> 
     <div class = "gt" id = "program"> </div>
 </div>
 
