Rebrand everything to Borum Feasts

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
@@ -20,12 +19,14 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css" type = "text/css">
+    <link rel = "stylesheet" href = "css/additions.css" type = "text/css">
+    <link rel = "shortcut icon" href = "images/icon.ico" type = "image/x-icon">
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">order.js</h1>
-      <h2 class="project-tagline">A JavaScript program taking the pizza order of multiple customers</h2>
+      <h1 class="project-name">Borum Feasts</h1>
+      <h2 class="project-tagline">Fake pizza delivery since 2018</h2>
       
         <a href="https://github.com/Borumer/order.js" class="btn">View on GitHub</a>
       
@@ -33,17 +34,8 @@
     </section>
 
     <section class="main-content">
-      <script src="../script.js"></script>
 
-<script>
-    let secondStylesheet = document.createElement('link');
-    secondStylesheet.href = 'css/additions.css';
-    secondStylesheet.type = 'text/css';
-    secondStylesheet.rel = 'stylesheet';
-    document.head.appendChild(secondStylesheet);
-</script>
-
-<h1 id="singh-catering-services">Singh Catering Services</h1>
+<h1 id="singh-catering-services">Borum Feasts</h1>
 
 <div style="display: none" id="snowflakes-photo">
   <a id="snowflake" href="https://unsplash.com/@kalleandco?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Kalle Kortelainen">
@@ -63,11 +55,6 @@
     </a>
 </div>
 
-<h2 id="about">About</h2>
-
-<p>Order.js is the first ES6 program (through the console) I have made that is hosted on GitHub through Git workflow. The person takes an order through a function call and the price is calculated based on what they ordered and how many items.</p>
-
-<object width="900" height="270" data="README.html" type="text/html"></object>
 <div id="forms" style="border-color: rgba(27, 63, 68, 0.2); border-width: 1px; border-style: inset; padding: 2%; margin: 2%">
     <form>
         <label for="orderType">Enter the type of food order: </label>
